--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -16,3 +16,6 @@ input{
 .btn-purple{
     @apply bg-purple-700 text-white border-purple-400 hover:bg-purple-500 hover:border-purple-300;
 }
+.btn-blue{
+    @apply bg-blue-700 text-white border-blue-400 hover:bg-blue-500 hover:border-blue-300;
+}
